# TP-projects

./: CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp
task3/part1/: README.md  makescript  runscript
task3/part2/: README.md  config.ini  makeandexecutescript
